Fix mobile footer spacing from being too much

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - var(--navbar-height));
+  min-height: calc(100vh - var(--navbar-height) - var(--footer-height));
   padding: 20px 0;
 }
 
@@ -149,13 +149,17 @@ input:focus-visible {
 .text-blue {color: var(--blue)}
 .text-primary {color: var(--primary)}
 
+:root {
+  --footer-height: 40px;
+}
+
 footer {
   background-color: var(--bg-primary);
   display: grid;
   justify-content: center;
   align-items: center;
   align-content: center;
-  height: 40px;
+  height: var(--footer-height);
   font-size: 20px;
 }
 
